--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
     <br>
     <p><span>IN THE TUBE</span></p>
     <button id="tri">TRIER</button>
-    <div id="displayTask"></div>
+    <div id="displayTask">
+      <h3></h3>
+      <p></p>
+      <p></p>
+    </div>
   </div>
 </main>
 </body>
