--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
   <div id="tasklist">
     <h2>Task<span>List</span></h2>
     <p style="color: rgba(3, 223, 3, 0.705);">Done</p>
+    <div class="displayDone"></div>
     <p>No task done</p>
+
     <br>
     <p><span>IN THE TUBE</span></p>
     <button id="tri">TRIER</button>
